--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     ],
     "require": {
         "php": "~7.0|~8.0",
-        "illuminate/support": "~5.5|~6.0|~7.0|~8.0|~9.0"
+        "illuminate/support": "~5.5|~6.0|~7.0|~8.0|~9.0",
+        "prettus/l5-repository": "^2.8"
     },
     "autoload": {
         "psr-4": {
